manifests/ArgoCD201-RolloutsDemoMirrorIstio/mirror.yaml
## This examples sets up istio mirroring if running locally using docker for destkop you can add
## istio-host-split.com to your /etc/hosts and point it to 127.0.0.1 to view demo.
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-canary
  labels:
    app: istio-host-split
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: istio-host-split

---
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-stable
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: istio-host-split

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-host-split-vsvc
spec:
  hosts:
    - "*"
  gateways:
    - istio-host-split-gateway
  http:
    - name: primary
      route:
        - destination:
            host: istio-host-split-stable
          weight: 100
        - destination:
            host: istio-host-split-canary
          weight: 0

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-host-split
spec:
  replicas: 4
  strategy:
    canary:
      canaryService: istio-host-split-canary
      stableService: istio-host-split-stable
      trafficRouting:
        managedRoutes:
          - name: mirror-route
        istio:
          virtualService:
            name: istio-host-split-vsvc
            routes:
              - primary
      analysis:
        templates:
        - templateName: success-rate
        startingStep: 1
        args:
        - name: service-name
          value: istio-host-split-canary
      steps:
        - setCanaryScale:
            weight: 50
        - setMirrorRoute:
            name: mirror-route
            percentage: 50
            match:
            - method:
                exact: POST
              path:
                prefix: /color
        - pause: {}
  selector:
    matchLabels:
      app: istio-host-split
  template:
    metadata:
      labels:
        app: istio-host-split
    spec:
      containers:
        - name: istio-host-split
          image: ghcr.io/argocon22workshop/rollouts-demo:green
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 16Mi
              cpu: 5m

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-host-split-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
